Version 2.0.0rc7 - The "xxxxxxxxxxxxxxxx" version.
----------
2004-10-XX

	Jacobo221:
		* Added the ability to resume/pause all downloads at the same time through amulecmd (very handy when all downloads have been paused due to lack of space)
		* Fixed two bugs on amulecmd by which using 'pause' or 'resume' without arguments would pause/resume the oldest download.
		* Several command simplifications on amulecmd to make it easier to use (while maintaining backwards compatibility).

	KingFish:
		* Fixed broken compilation in SysTray.cpp with gcc 3.3.4.

	Phoenix:
		* Fixed '&' char next to Preferences in amuleweb web page, as
		  reported by DreamWalker.
		* ExternalConn: protected GETCATTITLE command from buffer
		  overflow.
		* Start removing unused code from ExternalConn.cpp.
		* Fixed high CPU usage problem in amuleweb, thanks to jaguarwan for
		  the report. Daemonizing amuleweb should be done using the -q
		  switch.
		  
	ThePolish:
		* Little fix in wxCas SetSizer which caused display bug with wx-cvs
		* Add translations update (Thanks to all translators)
		* Removed wxCas documentation to slim source tree 
		(now downloadable from berlios)
		  
	Seagull:
		* Patch adding "Directory" column to the shared-files dialog.
		* Patch to add "Swap to this file" option for sources marked as 
		  "Asked For Another File" on download queue.
		  
	Xaignar:
		* Fixed the shared-files list, which would draw columns regardless 
		  of whenever or not they were hidden.
		* Fixed the progress-bars in the shared-files dialog. It should now
		  work properly for both part and completed files.
		* Fixed a bug in the ipfilter, where non-numeric chars on lines would
		  cause wrong ranges of IPs to be filtered.
		* Re-added the priority menu for servers, which had gone missing due
		  to a mistake.
		* Stopped the client-credits class from attempting to load older 
		  versions of the lists, which again would lead to mem-corruption.